--- a/css/style-openflow.css
+++ b/css/style-openflow.css
@@ -25,43 +25,56 @@ p {
  }
  /* ======================= */
 header {
-	width: 1120px;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	/* background-color: aliceblue; 後で削除する */
+	position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    justify-content: space-around;
+	background-color: #ffffff;
+	
 }
 
 .container {
-	width: 1040px;
+	width: 1120px;
+	height: 105px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	/* border: double 2px; 後で削除する */
+	/* border: double 2px; 後で削除 */
 }
 
 .logo-oya {
 	margin-top: 15px;
 }
 
+.logo-oya img {
+     text-align: center;
+	 margin-top: -8px;
+}
+
 .nav-oya {
-	width: 800px;
-	/* background-color: yellowgreen; 後で削除する */
+	width: 720px;
+	/* background-color: yellowgreen; 後で削除 */
 }
 
 .nav ul {
-	width: 720px;
+	width: 660px;
 	display: flex;
 	justify-content: space-between;
-	height: 80px;
-	line-height: 80px;
-	/* background-color: #999; 後で削除する */
+	height:105px;
+	line-height: 105px;
+	/* background-color: #999; 後で削除 */
 }
 
 .nav ul li {
 	list-style: none;
 	color: 444444;
-	color: #000000;
+	margin-top: -20px;
+    height: 110px;
 }
 
 .nav li a {
@@ -69,8 +82,8 @@ header {
 	color: #444444; */
 	display: block;
     position: relative;
-    height: 80px;
-    line-height: 80px;
+    height: 105px;
+    line-height: 105px; 
     color: #444444;
     padding: 0 15px;
     text-decoration: none;
@@ -78,7 +91,13 @@ header {
     font-weight: bold;
 }
 
+.hamburger-oya {
+	height: 105px;
+}
 
+.logo-oya {
+	height: 105px;
+}
 /* ========hover=========== */
 .nav li:hover {
 	background-color: #444444;
@@ -130,40 +149,7 @@ header {
 /* ======================= */
 /* WORKS */
 /* ======================= */
- .box {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 50px 100px;
- }
  
- .works-card {
-	width: 30%;
-	box-shadow: 0 3px 6px rgba(0,0,0,0.7);
-    list-style: none;
-}
- .works-card img {
-	width: 100%;
- }
- 
- .works-card h3 {
-	font-size: 16px;
-	text-align: left;
-	margin: 10px 20px 0 20px;
-}
-
-.works-card p {
-	text-align: left;
-	margin: 10px 20px 50px 20px;
-}
-
- .works-card a {
-	text-decoration: none;
-	color: #444444;
-	color: #000000;color: #000;
-    padding-bottom: 30px;
- }
-
 /* ==========================
          フッター
 ============================= */
@@ -176,11 +162,11 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 20px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
-	width: 150px;
+	width: 100px;
 }
 
 .ft-nav-oya {
@@ -189,12 +175,12 @@ footer {
 	background-color: #CCCCCC;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 	margin: 0 auto;
-	text-align: center;
 	background-color: #CCCCCC;
 }
+
 /* ==========================
          フッターリスト
 ============================= */
@@ -208,16 +194,23 @@ footer {
 	color: #000000;
 }
 
-
 .ft-nav ul {
 	height: 120px;
-	line-height: 120px;
+	line-height: 130px;
 	text-align: center;
 	background-color: #CCCCCC; 
 	margin: 0 auto;
 }
 
-.ft-nav ul li {
+.ft-nav2 ul{
+	height: 80px;
+	line-height: 80px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav ul li, .ft-nav2 ul li {
 	display: inline;
 	margin-right: 20px;
 	color: #444444;
@@ -256,16 +249,16 @@ a {
 	color: #000000;
 
 }
+
 /* ========================= */
 .sns {
 	width: 100%;
 	margin: 0 auto;
-	padding-top: 15px;
+	/* padding-top: 15px; */
 	background-color: #CCCCCC; 
 	text-align: center;
 }
 /* ========================= */
-
 .Copyright {
     width: 100%;
 	margin: 0 auto;
@@ -279,58 +272,39 @@ small {
 	font-size: xx-small;
 }
 
-  /* ===========================
+/* ===========================
            タブレット
 =========================== */
   @media screen and (min-width:600px) and (max-width:960px){
 /* ===========================
             ヘッダー
 =========================== */
+/* ===========================
+            ヘッダー
+=========================== */
 header {
-	height: 115px;
+	width: 100%;
 }
 
 .container-oya {
 	width: 100%;
-    margin: 15px auto 0 auto;
-    padding: 10px 10px 0 10px;
-    justify-content: space-between;
-    align-items: center;
-	
 }
 
+.container {
+	width: 100%;
+}
 
 .nav-oya {
 	width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-	/* background-color: beige; 後で削除する */
 }
 
 .nav {
 	width: 100%;
-	padding: 0 0 25px 0;
 }
 
-.nav li {
-    margin-left: 10px;
-	display: block;
-	float: left;
-	background-color: #444444;
-    height: 40px;
-	line-height: 40px;
-    width: 190px;
-    text-align: center;
-	font-size: smaller;
+.logo-oya img {
+	margin-top: -4px;
 }
-
-
-
-
-
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -392,7 +366,7 @@ header {
  nav.globalMenuSp {
    position: fixed;
    z-index : 2;
-   top: 25px;
+   top: 15px;
    left : 0;
    color: #000;
    /* background: #fff; */
@@ -441,35 +415,55 @@ header {
     display: none;
  }
 
- .logo-oya {
-	 display: none;
+.logo-oya {
+	margin-left: 60px;
  }
+
 /* ==========================
          フッター
 ============================= */
-
-
 .ft-logo img {
-	width: 240px;
+	width: 100px;
+}
+
+.ft-logo {
+    padding: 20px 0 ;
 }
 
 .ft-nav-oya {
 	width: 100%;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 }
 
 .ft-nav ul {
 	width: 100%;
+    height: 30px;
+    line-height: 30px;
+	padding-top: 20px;
+	padding-left: 0;
+    padding-right: 0;
+}
+
+.ft-nav2 ul {
+	width: 80%;
+	height: 30px;
+    line-height: 30px;
+	padding: 0;
+}
+
+.ft-contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* ========================= */
 .Copyright {
-    width: 100%;
-	
+    width: 100%;	
 }
+
 
 }
 
@@ -482,80 +476,22 @@ header {
 =========================== */
 header {
 	width: 100%;
-	height: 150px;
-	margin: 0 auto;
-	/* background-color: aqua;  後で削除する */
-	background-color: #CCCCCC;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 500;
-}
-
-.container-oya {
-	width: 100%;
-    margin: 0 auto;
-	display: flex;
-    /* flex-direction: column; */
-    align-items: center; 
-}
-
-.logo img {
-	padding-top: 5px;
-	width:180px;
-}
-
-.hd-icon {
-	width: 160px;
-	margin: 20px 20px 0 20px;
-	text-align: center;
-	background-color: #ffffff;	
-}
-
-.hd-icon a {
-	color: #444444;
-}
-/* ========hover=========== */
-
-.hd-icon:hover {
-	background-color: #444444;
-}
-
-.hd-icon p:hover {
-	color: #ffffff;
 }
 
 /* ========hover=========== */
-
 .container {
 	display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.container img {
-	padding: 0 5px;
-}
-
 .nav-oya {
-	/* width: 960px; */
-	height: 5px;
-	/* width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; */
-	/* background-color: beige; 後で削除する */
+	width: 100%;
 }
 
-
-
-
-
-
-
-
+.logo-oya img {
+    margin-top: 25px;
+}
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -617,7 +553,7 @@ header {
   nav.globalMenuSp {
 	position: fixed;
 	z-index : 2;
-	top: 60px;
+	top: 15px;
 	left : 0;
 	color: #000;
 	/* background: #fff; */
@@ -666,96 +602,50 @@ header {
 	 display: none;
   }
 
+  .contents-oya {
+    padding-bottom: 10px;
+}
 
-  /* ==========================
+/* ==========================
          フッター
 ============================= */
-footer {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
+.ft-logo img {
+	width: 20%;
 }
 
 .ft-logo {
-	text-align: center;
-	padding-top: 30px;
+    padding: 20px 0;
 }
 
-.ft-logo img {
-	width: 240px;
-}
-
-.ft-nav-oya {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav {
-    width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav ul {
-	width: 68%;
-	line-height: 30px;
-	display: flex;
+ .ft-nav ul {
+    display: flex;
     flex-direction: column;
-	background-color: #CCCCCC; 
-	margin: 30px auto;
-	padding-left: 80px;
-    text-align: start;
-}
+    line-height: 30px;
+    padding-top: 20px;
+	padding-bottom: 10px;
+} 
 
 .ft-nav ul li {
-	display: inline;
-	/* margin-right: 10px; */
-	margin: 0 auto;
-	color: #444444;
-	font-size: small;
-	list-style: none;
-	padding-left:10px;
-	border-left:1px solid #999;
+	margin-right: 40px;
+}
+.ft-nav2 ul {
+	height: 30px;
+    line-height: 30px;
+	padding: 0 0 0 9px;
 }
 
-.display-none {
-	border-left:0;
-	padding-left:0;
+.ft-contact {
+	margin-top: 50px;
+	margin-bottom: 20px;
+} 
+
+.list a {
+    font-size: 14px;
 }
 
-a {
-	text-decoration: none;
+.ft-nav2 ul li {
+	margin-right: 20px;
 }
-
-/* ========================= */
-.sns {
-	width: 100%;
-	margin: 0 auto;
-	padding-top: 15px;
-	background-color: #CCCCCC; 
-	text-align: center;
-}
-
-/* ========================= */
-
-.Copyright {
-    width: 100%;
-	margin: 0 auto;
-	padding: 10px 0;
-	background-color: #CCCCCC;
-	text-align: center;
-}
-
-small {
-    color: #444444;
-	font-size: xx-small;
-}
-
-
-
-
-
 } 
 
 
