--- a/css/style-fcsupport.css
+++ b/css/style-fcsupport.css
@@ -25,43 +25,56 @@ p {
  }
  /* ======================= */
 header {
-	width: 1120px;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	/* background-color: aliceblue; 後で削除する */
+	position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    justify-content: space-around;
+	background-color: #ffffff;
+	
 }
 
 .container {
-	width: 1040px;
+	width: 1120px;
+	height: 105px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	/* border: double 2px; 後で削除する */
+	/* border: double 2px; 後で削除 */
 }
 
 .logo-oya {
 	margin-top: 15px;
 }
 
+.logo-oya img {
+     text-align: center;
+	 margin-top: -8px;
+}
+
 .nav-oya {
-	width: 800px;
-	/* background-color: yellowgreen; 後で削除する */
+	width: 720px;
+	/* background-color: yellowgreen; 後で削除 */
 }
 
 .nav ul {
-	width: 720px;
+	width: 660px;
 	display: flex;
 	justify-content: space-between;
-	height: 80px;
-	line-height: 80px;
-	/* background-color: #999; 後で削除する */
+	height:105px;
+	line-height: 105px;
+	/* background-color: #999; 後で削除 */
 }
 
 .nav ul li {
 	list-style: none;
 	color: 444444;
-	color: #000000;
+	margin-top: -20px;
+    height: 110px;
 }
 
 .nav li a {
@@ -69,8 +82,8 @@ header {
 	color: #444444; */
 	display: block;
     position: relative;
-    height: 80px;
-    line-height: 80px;
+    height: 105px;
+    line-height: 105px; 
     color: #444444;
     padding: 0 15px;
     text-decoration: none;
@@ -78,7 +91,13 @@ header {
     font-weight: bold;
 }
 
+.hamburger-oya {
+	height: 105px;
+}
 
+.logo-oya {
+	height: 105px;
+}
 /* ========hover=========== */
 .nav li:hover {
 	background-color: #444444;
@@ -89,6 +108,7 @@ header {
 	color: #ffffff;
 }
 /* ========hover=========== */
+
 
 /* ==========================
       メインコンテンツ
@@ -189,6 +209,7 @@ header {
 	height: auto;
 }
 .box {
+	width: 100%;
 	margin: 30px auto;
 	display: flex;
     justify-content: center;
@@ -209,7 +230,7 @@ header {
     height: auto;
 }
 
-/* =========================
+/* ==========================
          フッター
 ============================= */
 footer {
@@ -221,11 +242,11 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 20px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
-	width: 150px;
+	width: 100px;
 }
 
 .ft-nav-oya {
@@ -234,12 +255,12 @@ footer {
 	background-color: #CCCCCC;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 	margin: 0 auto;
-	text-align: center;
 	background-color: #CCCCCC;
 }
+
 /* ==========================
          フッターリスト
 ============================= */
@@ -253,16 +274,23 @@ footer {
 	color: #000000;
 }
 
-
 .ft-nav ul {
 	height: 120px;
-	line-height: 120px;
+	line-height: 130px;
 	text-align: center;
 	background-color: #CCCCCC; 
 	margin: 0 auto;
 }
 
-.ft-nav ul li {
+.ft-nav2 ul{
+	height: 80px;
+	line-height: 80px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav ul li, .ft-nav2 ul li {
 	display: inline;
 	margin-right: 20px;
 	color: #444444;
@@ -301,16 +329,16 @@ a {
 	color: #000000;
 
 }
+
 /* ========================= */
 .sns {
 	width: 100%;
 	margin: 0 auto;
-	padding-top: 15px;
+	/* padding-top: 15px; */
 	background-color: #CCCCCC; 
 	text-align: center;
 }
 /* ========================= */
-
 .Copyright {
     width: 100%;
 	margin: 0 auto;
@@ -323,7 +351,6 @@ small {
     color: #444444;
 	font-size: xx-small;
 }
-
   /* ===========================
            タブレット
 =========================== */
@@ -332,50 +359,16 @@ small {
             ヘッダー
 =========================== */
 header {
-	height: 115px;
-}
-
-.container-oya {
 	width: 100%;
-    margin: 15px auto 0 auto;
-    padding: 10px 10px 0 10px;
-    justify-content: space-between;
-    align-items: center;
-	
 }
-
 
 .nav-oya {
 	width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-	/* background-color: beige; 後で削除する */
 }
 
 .nav {
 	width: 100%;
-	padding: 0 0 25px 0;
 }
-
-.nav li {
-    margin-left: 10px;
-	display: block;
-	float: left;
-	background-color: #444444;
-    height: 40px;
-	line-height: 40px;
-    width: 190px;
-    text-align: center;
-	font-size: smaller;
-}
-
-
-
-
-
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -437,7 +430,7 @@ header {
  nav.globalMenuSp {
    position: fixed;
    z-index : 2;
-   top: 25px;
+   top: 15px;
    left : 0;
    color: #000;
    /* background: #fff; */
@@ -487,33 +480,105 @@ header {
  }
 
  .logo-oya {
-	 display: none;
+	margin-left: 60px;
  }
+
+ .logo-oya img {
+    margin-top: 0;
+}
+
+
+/* ======================= */
+/* 開業までの流れ*/
+/* ======================= */
+.content {
+	width: 100%;
+
+}
+ .box-oya {
+	 width: 100%;
+ }
+
+ .box-oya h3 {
+    width: 80%;
+ }
+
+ .content-sub {
+	width: 100%;
+	padding: 0%;
+}
+
+ .top-oya {
+	 width: 100%;
+	 padding: 0;
+ }
+
+.details {
+	width: 220px;
+	height: 100%;	
+}
+
+.details img {
+	width: 100%;
+	height: auto;
+}
+
+.box {
+    width: 100%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box img {
+	width: 400px;
+    height: auto;
+}
+
 /* ==========================
          フッター
 ============================= */
-
+.list {
+	padding: 0;
+}
 
 .ft-logo img {
-	width: 240px;
+	width: 100px;
+}
+
+.ft-logo {
+    padding: 20px 0 ;
 }
 
 .ft-nav-oya {
 	width: 100%;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 }
 
 .ft-nav ul {
 	width: 100%;
+    height: 30px;
+    line-height: 30px;
+	padding-top: 20px;
+}
+
+.ft-nav2 ul {
+	width: 80%;
+	height: 30px;
+    line-height: 30px;
+}
+
+.ft-contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* ========================= */
 .Copyright {
-    width: 100%;
-	
+    width: 100%;	
 }
 
 }
@@ -527,14 +592,22 @@ header {
 =========================== */
 header {
 	width: 100%;
-	height: 150px;
-	margin: 0 auto;
-	/* background-color: aqua;  後で削除する */
-	background-color: #CCCCCC;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 500;
+}
+/* ========hover=========== */
+
+.container {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+	height: 120px;
+}
+
+.nav-oya {
+	width: 100%;
+}
+
+.logo-oya img {
+    margin-top: 30px;
 }
 
 .container-oya {
@@ -550,57 +623,13 @@ header {
 	width:180px;
 }
 
-.hd-icon {
-	width: 160px;
-	margin: 20px 20px 0 20px;
-	text-align: center;
-	background-color: #ffffff;	
+.mainvisual {
+    padding: 80px 0;
 }
 
-.hd-icon a {
-	color: #444444;
+.mainvisual h1 {
+    margin: 0 10px;
 }
-/* ========hover=========== */
-
-.hd-icon:hover {
-	background-color: #444444;
-}
-
-.hd-icon p:hover {
-	color: #ffffff;
-}
-
-/* ========hover=========== */
-
-.container {
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.container img {
-	padding: 0 5px;
-}
-
-.nav-oya {
-	/* width: 960px; */
-	height: 5px;
-	/* width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; */
-	/* background-color: beige; 後で削除する */
-}
-
-
-
-
-
-
-
-
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -711,95 +740,94 @@ header {
 	 display: none;
   }
 
+  /* ======================= */
+/* 開業までの流れ*/
+/* ======================= */
+.content {
+	width: 100%;
 
-  /* ==========================
+}
+ .box-oya {
+	 width: 100%;
+ }
+
+ .box-oya h3 {
+    width: 80%;
+ }
+
+ .content-sub {
+	width: 100%;
+	padding: 0%;
+}
+
+ .top-oya {
+	 width: 100%;
+	 flex-direction: column;
+	 padding: 0;
+ }
+
+.details {
+	margin: 0 auto;
+	width: 80%;
+	height: 100%;	
+}
+
+.details img {
+	width: 100%;
+	height: auto;
+}
+
+.box {
+    width: 100%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box img {
+	width: 50%;
+    height: auto;
+}
+
+  
+/* ==========================
          フッター
 ============================= */
-footer {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
+.ft-logo img {
+	width: 20%;
 }
 
 .ft-logo {
-	text-align: center;
-	padding-top: 30px;
+    padding: 20px 0;
 }
 
-.ft-logo img {
-	width: 240px;
-}
-
-.ft-nav-oya {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav {
-    width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav ul {
-	width: 68%;
-	line-height: 30px;
-	display: flex;
+ .ft-nav ul {
+    display: flex;
     flex-direction: column;
-	background-color: #CCCCCC; 
-	margin: 30px auto;
-	padding-left: 80px;
-    text-align: start;
+    line-height: 30px;
+    padding-top: 20px;
+	padding-bottom: 10px;
+} 
+
+.ft-nav2 ul {
+	/* margin-left: 20px; */
+	height: 30px;
+    line-height: 30px;
+	padding: 0;
 }
 
-.ft-nav ul li {
-	display: inline;
-	/* margin-right: 10px; */
-	margin: 0 auto;
-	color: #444444;
-	font-size: small;
-	list-style: none;
-	padding-left:10px;
-	border-left:1px solid #999;
+.ft-contact {
+	margin-top: 50px;
+	margin-bottom: 20px;
+} 
+
+.list a {
+    font-size: 14px;
 }
 
-.display-none {
-	border-left:0;
-	padding-left:0;
+.ft-nav2 ul li {
+	margin-right: 20px;
 }
-
-a {
-	text-decoration: none;
-}
-
-/* ========================= */
-.sns {
-	width: 100%;
-	margin: 0 auto;
-	padding-top: 15px;
-	background-color: #CCCCCC; 
-	text-align: center;
-}
-
-/* ========================= */
-
-.Copyright {
-    width: 100%;
-	margin: 0 auto;
-	padding: 10px 0;
-	background-color: #CCCCCC;
-	text-align: center;
-}
-
-small {
-    color: #444444;
-	font-size: xx-small;
-}
-
-
-
-
 
 } 
 
